--- a/Zadaci za vjezbu 1/info.html
+++ b/Zadaci za vjezbu 1/info.html
@@ -22,12 +22,16 @@
         </table>
         
         <p>
-            <a href="https://www.vijesti.me/" target="iframe_1">Vijesti</a><br>
-            <a href="https://portalanalitika.me/" target="iframe_2">Portal Analitika</a><br>
-            <a href="https://kolektiv.me/" target="iframe_3">Kolektiv</a><br>
-            <a href="https://www.blic.rs/" target="iframe_4">Blic</a><br>
-            <a href="https://www.dailymail.co.uk/home/index.html" target="iframe_5">Daily Mail</a><br>
-            <a href="https://www.thesun.co.uk/" target="iframe_6">The Sun</a><br>
+            <ul>
+                <li><a href="https://www.vijesti.me/" target="iframe_1">Vijesti</a><br></li>
+                <li><a href="https://portalanalitika.me/" target="iframe_2">Portal Analitika</a><br></li>
+                <li><a href="https://kolektiv.me/" target="iframe_3">Kolektiv</a><br></li>
+                <li><a href="https://www.blic.rs/" target="iframe_4">Blic</a><br></li>
+                <li><a href="https://www.dailymail.co.uk/home/index.html" target="iframe_5">Daily Mail</a><br></li>
+                <li><a href="https://www.thesun.co.uk/" target="iframe_6">The Sun</a><br></li>
+            </ul>
         </p>
+        <br>
+        <a href="./pregled.html">Nazad na Pregled</a>
     </body>
 </html>
