--- a/Zadaci za vjezbu 1/light.html
+++ b/Zadaci za vjezbu 1/light.html
@@ -7,5 +7,7 @@
             <a href="pic_bulbon.gif" target="iframe_1">ON</a>
             <a href="pic_bulboff.gif" target="iframe_1">OFF</a>
         </p>
+        <br>
+        <a href="./pregled.html">Nazad na Pregled</a>
     </body>
 </html>
