--- a/Zadaci za vjezbu 1/tabela.html
+++ b/Zadaci za vjezbu 1/tabela.html
@@ -41,5 +41,7 @@
               </tr>
             </tr>
         </table>
+        <br>
+        <a href="./pregled.html">Nazad na Pregled</a>
     </body>
 </html>
