--- a/Zadaci za vjezbu 1/lyrics.html
+++ b/Zadaci za vjezbu 1/lyrics.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <Title>Zadatak 4</Title>
+    </head>
     <body>
         <a href="#pjesma1">Dire Straits - Money for Nothing</a><br>
         <a href="#pjesma2">Iron Maiden - Trooper</a><br>
