--- a/Zadaci za vjezbu 1/pregled.html
+++ b/Zadaci za vjezbu 1/pregled.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Pregled</title>
+    </head>
     <body>
         <img src="./velimir.jpg" alt="Velimir Turkovic" width="250" height="320">
         <br>
