--- a/Zadaci za vjezbu 1/light.html
+++ b/Zadaci za vjezbu 1/light.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <head>Zadatak 3</head>
     <body>
         <iframe name="iframe_1" width="100" height="200"></iframe>
         <br>
